Solve the footer problem on mobile

--- a/index.css
+++ b/index.css
@@ -124,9 +124,9 @@ body {
     font-size: 1.6rem;
     color: hsl( var(--clr-white) );
     background: linear-gradient(270deg, rgb(147, 125, 208) 4%, rgb(119, 91, 199) 34%, rgb(58, 58, 58) 100%);
-    /*line-height: 1.5;*/
+    line-height: 0.9;
     min-height: 100vh;
-    /*display: grid;*/
+    display: grid;
     grid-template-rows: min-content 1fr;
     overflow-x: hidden;
 }
@@ -271,7 +271,7 @@ select {
 .fs-800,
 .fs-700,
 .fs-600 {
-    line-height: 1.1;
+    line-height: 0.9;
 }
 
 .numbered-title {
@@ -391,7 +391,7 @@ select {
 
     img, picutre {
     max-width: 100%;
-    padding-top: 10%;
+    padding-top: 0%;
 }
     
     .primary-navigation {
@@ -611,6 +611,7 @@ body {
 .numbered-title {
     grid-area: title;
     padding-bottom: 1rem;
+    padding-top: 0.4rem;
     align-self: normal;
 }
 
@@ -675,7 +676,7 @@ body {
 .grid-container--crew > picture {
     grid-area: image;
     max-width: 60%;
-    border-bottom: 1px solid hsl( var(--clr-white) / .1);
+    /*border-bottom: 1px solid hsl( var(--clr-white) / .1);*/
 }
 
 .grid-container--crew > .dot-indicators {
@@ -769,93 +770,13 @@ body {
 
 footer {
   width: 100vw;
-  position: ;
-  bottom: 0px;
+  position: relative;
+  bottom: 4rem;
 }
 footer div {
     background-color: #223570;
-    margin: -5px 0px 0px 0px;
+    margin: -50px 0px -50px 0px;
     padding: 0%;
     color: #fff;
     text-align: center;
 }
-svg {
-  width:100%;
-}
-.arrow {
-  stroke-width: .3px;
-  stroke:yellow;
-}
-.topball {
-  animation: ball 1.5s ease-in-out;
-  animation-iteration-count:infinite;
-  animation-direction: alternate;
-  animation-delay: 0.3s;
-  cursor:pointer;
-}
-
-.wave {
-  animation: wave 3s linear;
-  animation-iteration-count:infinite;
-  fill: #223570;
-}
-.drop {
-  fill: transparent;
-  animation: drop 5s ease infinite normal;
-  stroke: #4478e3;
-  stroke-width:0.5;
-  opacity:.6; 
-  transform: translateY(80%);
-}
-.drop1 {
-  transform-origin: 20px 3px;
-}
-.drop2 {
-  animation-delay: 3s;
-  animation-duration:3s;
-  transform-origin: 25px 3px;
-}
-.drop3 {
-  animation-delay: -2s;
-  animation-duration:3.4s;
-  transform-origin: 16px 3px;
-}
-.gooeff {
-  	filter: url(#goo);
-}
-#wave2 {
-  animation-duration:5s;
-  animation-direction: reverse;
-  opacity: .6
-}
-#wave3 {
-  animation-duration: 7s;
-  opacity:.3;
-}
-@keyframes drop {
-  0% {
-    transform: translateY(80%); 
-    opacity:.6; 
-  }
-  80% {
-    transform: translateY(80%); 
-    opacity:.6; 
-  }
-  90% { 
-    transform: translateY(10%) ; 
-    opacity:.6; 
-  }
-  100% { 
-    transform: translateY(0%) scale(1.5);  
-    stroke-width:0.2;
-    opacity:0; 
-  }
-}
-@keyframes wave {
-  to {transform: translateX(-100%);}
-}
-@keyframes ball {
-  to {transform: translateY(20%);}
-}
-
-
